# ALA-AutoLabelAgent

./: .gitignore  NEXT_STEPS.md  PLAN.md  README.md  TECHSPEC.md  TODO.md  analyze_calculation_source.py  analyze_consistent_results.py  check_csv_structure.py  debug_paths.py  debug_resnet_data.py  docker-compose.yml  file_difference_analysis.json  final_table7_actual_vs_predicted.csv  final_table8_prediction_source.csv  find_missing_files.py  fsl_vs_groundtruth_analysis.csv  fsl_vs_groundtruth_table8.csv  generate_complete_corrected_tables.py  generate_corrected_table5.py  run_fsl_direct.py  start_mcp_with_integrations.bat  table7_raw_0.3~0.9.csv  table8_raw_0.3~0.9.csv  test_few_shot_simple.py
@refactoring/: FLORENCE2_RUNBOOK.md  README.md
ALA/: Dockerfile
ALA-GUI/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  KNOWN_ISSUES.md  M0_COMPLETION_SUMMARY.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
ALA-GUI/.github/workflows/: tests.yml
ALA-GUI/docs/: ARCHITECTURE.md  BRANCHING_STRATEGY.md  IMAGECANVAS.md  M1_COMPLETION_SUMMARY.md  MAINWINDOW.md  MODEL_SETUP.md  MODEL_UI.md  PYTHON_UPGRADE.md  SETUP.md  STYLEGUIDE.md  TESTING.md
ALA-GUI/src/: main.py  test_batch_process_dialog.py  test_e2e_auto_annotation.py  test_export_dialog.py  test_image_canvas.py  test_main_window.py
ALA-GUI/src/controllers/: __init__.py  project_manager.py  shortcut_manager.py
ALA-GUI/src/models/: __init__.py  annotation.py  class_definition.py  florence2_model.py  image.py  model_controller.py  model_inference_engine.py  model_manager.py  project.py  sam2_model.py
ALA-GUI/src/utils/: __init__.py  annotation_exporter.py  config_manager.py  exceptions.py  file_utils.py  image_utils.py  logger.py  path_utils.py
ALA-GUI/src/views/: __init__.py  auto_annotate_dialog.py  batch_process_dialog.py  class_list_widget.py  export_dialog.py  file_list_widget.py  image_canvas.py  main_window.py  settings_dialog.py
ALA-GUI/src/widgets/: __init__.py  results_preview_widget.py
ALA-GUI/tests/: conftest.py  test_basic.py  utils_test.py
ALA-GUI/tests/integration/: test_file_list_interactions.py  test_image_canvas_interactions.py  test_keyboard_shortcuts.py  test_main_window_integration.py  test_main_window_layout.py  test_project_workflow.py
ALA-GUI/tests/unit/: test_annotation_model.py  test_auto_annotate_dialog.py  test_class_list_widget.py  test_class_model.py  test_config_manager.py  test_exceptions.py  test_file_list_widget.py  test_file_utils.py  test_florence2_model.py  test_image_canvas.py  test_image_model.py  test_image_utils.py  test_logger.py  test_main_window.py  test_main_window_m2.py  test_model_controller.py  test_model_inference_engine.py  test_path_utils.py  test_project_manager.py  test_project_model.py  test_sam2_model.py  test_settings_dialog.py  test_shortcut_manager.py
ALA-Web/: EXECUTION_GUIDE.md  GETTING_STARTED.md  INSTALL.md  README.md  run.bat  run.sh  setup.bat  setup.sh  test_all_features.py  upload_test.py  verify_ai_env.py  verify_ontology.py
ALA-Web/backend/: API_TESTING_GUIDE.md  INSTALL_LOCAL_LIB.md  main.py  requirements.txt  requirements_ai.txt  setup_ai_env.bat  setup_ai_models.bat  setup_local_lib.bat  setup_sam2.bat  start-backend.bat  test_annotation.py  test_backend.py
ALA-Web/docs/: ARCHITECTURE_DECISION.md  README.md  api.md  development.md  troubleshooting.md
ALA-Web/frontend/: package-lock.json  package.json  start-frontend.bat
ALA-Web/mcp-servers/: package-lock.json  package.json  run_puppeteer.bat
ALA-Web/scripts/: README.md  download_models.py
ALA/config/: main_webapp_config.json
ALA/data/: README.md
ALA/docs/: SECURITY.md  TROUBLESHOOTING.md  UI_TRANSFORMATION_REQUIREMENTS.md
ALA/models/: README.md
config/: mcp_config.json
dashboard_static/css/: style.css
dashboard_static/js/: dashboard.js
(+89 files in other folders)
